--- a/homework.html
+++ b/homework.html
@@ -22,9 +22,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="file:///C:/Users/black/OneDrive/Desktop/homework2/homework2.html">About</a>
-            <a class="nav-link active" aria-current="page" href="file:///C:/Users/black/OneDrive/Desktop/homework2/portfolio%20homework.html">Portfolio</a>
-            <a class="nav-link" href="file:///C:/Users/black/OneDrive/Desktop/homework2/contact.html">Contact</a>
+            <a class="nav-link" href="index.html">About</a>
+            <a class="nav-link" href="homework.html">Portfolio</a>
+            <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
             <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
           </div>
         </div>
